--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ Thumbs.db
 # track these mu-plugins, plugins, and themes
 # add your own entries here
 !wp-content/themes/ameraview-infinity-pro/
+!wp-content/mu-plugins/ameraview-core-functionality/
+!wp-content/mu-plugins/load.php
